deploy/denis-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: denis
  annotations:
    config.linkerd.io/proxy-await: "enabled"
    config.linkerd.io/proxy-log-format: "json"
    linkerd.io/inject: "enabled"
