deploy/integration-grpc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-grpc
  labels:
    app: integration-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-grpc
  template:
    metadata:
      labels:
        app: integration-grpc
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "integration-grpc"
        dapr.io/app-protocol: "grpc"
        dapr.io/app-port: "6001"
        dapr.io/enable-api-logging: "true"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: integration-grpc
        image: ghcr.io/shumkovdenis/bl-integration:main
        ports:
        - containerPort: 6001
        imagePullPolicy: Always
