deploy/ingress-dapr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /v1.0/invoke/gateway.denis/method/$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: dapr
  rules:
    - host: denis-dapred.dev.releaseband.com
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingress-dapr-dapr
                port:
                  number: 80
