deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: denis
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: application
  rules:
    - host: denis.dev.releaseband.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 80
